Fixed issue where where the title for the patient list would create a new line above it. This was done by wrapping the whole patient list into a main container grid.

--- a/src/main/webapp/css/patients.css
+++ b/src/main/webapp/css/patients.css
@@ -32,3 +32,10 @@
 	flex-grow: 1; /*Flex as a child to grow vertically from flex parent.*/
 }
 
+.patient-list-container {
+	height: 100%;
+	width: var(--sidenav-left-margin);
+	background-color: var(--darker-blue);
+	overflow-x: hidden;
+	text-align: center;
+}
